--- a/CatchMeWinFormsApp/CatchMeWinFormsApp.csproj
+++ b/CatchMeWinFormsApp/CatchMeWinFormsApp.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BallGameWinFormsApp\BallGameWinFormsApp.csproj" />
+  </ItemGroup>
+
 </Project>
