--- a/CatchMeWinFormsApp/CatchMeWinFormsApp.csproj
+++ b/CatchMeWinFormsApp/CatchMeWinFormsApp.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BallGameWinFormsApp\BallGameWinFormsApp.csproj" />
+    <ProjectReference Include="..\BallsWinFormsLibrary\BallsWinFormsLibrary.csproj" />
   </ItemGroup>
 
 </Project>
